--- a/index.css
+++ b/index.css
@@ -1,13 +1,53 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    height: 100vh;
+    align-items: center;
+    height: 100%;
     background-color: #5aa55b;
 }
 
 h1 {
-    color: #d3fed3;
+    color: #dafada;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     margin-top: 20px;
+}
+
+h2 {
+    color: #dafada;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    margin-bottom: 5px;
+}
+
+p {
+    color: #dafada;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.container {
+    text-align: center;
+    margin-top: 40px;
+    width: 50%;
+}
+
+.linkBox {
+    background-color: #54c556;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+.linkBox:hover {
+    background-color: #4bb54b;
+    cursor: pointer;
 }
