--- a/quotes/index.css
+++ b/quotes/index.css
@@ -34,7 +34,11 @@ a {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
+    justify-content: center;
     width: 75%;
 }
 
@@ -45,4 +49,27 @@ a {
     padding: 10px;
     border-radius: 10px;
     margin: 10px;
+}
+
+.linkBox {
+    background-color: #54c556;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 10px;
+    margin: 10px;
+    width: 30%;
+    align-items: center;
+}
+
+.linkBox:hover {
+    background-color: #4bb54b;
+    cursor: pointer;
+}
+
+.linkBox span {
+    font-size: 18px;
+    color: #dafada;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
