--- a/music/index.css
+++ b/music/index.css
@@ -58,3 +58,26 @@ a {
     text-align: left;
     margin-left: 20px;
 }
+
+.linkBox {
+    background-color: #54c556;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 10px;
+    margin: 10px;
+    width: 30%;
+    align-items: center;
+}
+
+.linkBox:hover {
+    background-color: #4bb44b;
+    cursor: pointer;
+}
+
+.linkBox span {
+    font-size: 18x;
+    color: #dafada;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
