--- a/characters/index.css
+++ b/characters/index.css
@@ -94,3 +94,38 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+@media (max-width: 768px)  {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 85%;
+    }
+
+    .character {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .characterText {
+        text-align: center;
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .character img {
+        width: 50%;
+        height: auto;
+        margin: 10px;
+    }
+}
