--- a/index.css
+++ b/index.css
@@ -51,3 +51,72 @@ a {
     background-color: #4bb54b;
     cursor: pointer;
 }
+
+@media (max-width: 640px) {
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 15px;
+    }
+
+    .container {
+        width: 90%;
+    }
+
+    .linkBox {
+        padding: 5px;
+        margin: 5px;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 641px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 85%;
+    }
+
+    .linkBox {
+        padding: 8px;
+        margin: 8px;
+    }
+}
+
+@media (max-width: 1024px) and (min-width: 769px) {
+    h1 {
+        font-size: 45px;
+    }
+
+    h2 {
+        font-size: 28px;
+    }
+
+    p {
+        font-size: 19px;
+    }
+
+    .container {
+        width: 80%;
+    }
+
+    .linkBox {
+        padding: 9px;
+        margin: 9px;
+    }
+}
