--- a/quotes/index.css
+++ b/quotes/index.css
@@ -73,3 +73,51 @@ a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+@media (max-width: 640px) {
+    h1 {
+        font-size: 35px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    .container {
+        width: 90%;
+    }
+
+    .linkBox {
+        padding: 10px;
+        margin: 10px;
+        width: 60%;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 641px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 85%;
+    }
+
+    .linkBox {
+        padding: 12px;
+        margin: 12px;
+        width: 40%;
+    }
+}
